--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.0.0",
     "core-js": "^2.6.5",
+    "jquery": "^3.4.1",
     "open-iconic": "^1.1.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
