--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "open-iconic": "^1.1.1",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-google-oauth2": "^1.4.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
