Google credentials authenticated on server, Flask dev autoreloading

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -4,4 +4,4 @@ init:
 	pip install -r requirements.txt
 
 dev:
-	env FLASK_APP=router.py flask run
+	env FLASK_APP=router.py FLASK_DEBUG=1 python -m flask run
